--- a/DreamSchedulerApplication/Web.config
+++ b/DreamSchedulerApplication/Web.config
@@ -13,6 +13,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
+    <!--Security filter-->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" name="type" />
+    </authentication>
+
+    <!--Security filter-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
