--- a/DreamSchedulerApplication/DreamSchedulerApplication.csproj
+++ b/DreamSchedulerApplication/DreamSchedulerApplication.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Models\LoginTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CustomAttributes.cs" />
+    <Compile Include="Security\getCookieInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
