--- a/DreamSchedulerApplication/Web.config
+++ b/DreamSchedulerApplication/Web.config
@@ -9,13 +9,17 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+
+    <add key="PreserveLoginUrl" value="true" />
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
     <!--Security filter-->
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" name="type" />
+      <forms loginUrl="~/Account/Login" name="Security" timeout="2880" />
     </authentication>
    
     <!--Security filter-->
@@ -44,7 +48,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
