--- a/DreamSchedulerApplication/DreamSchedulerApplication.csproj
+++ b/DreamSchedulerApplication/DreamSchedulerApplication.csproj
@@ -145,7 +145,6 @@
     </Compile>
     <Compile Include="Models\AcademicRecord.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\CourseSequence.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PrivateData.cs" />
@@ -226,7 +225,6 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Student\Courses.cshtml" />
     <Content Include="Views\Student\Professors.cshtml" />
     <Content Include="Views\Admin\Database.cshtml" />
     <Content Include="Views\Manage\AccountEdit.cshtml" />
@@ -241,6 +239,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Neo4j\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
