--- a/DreamSchedulerApplication/DreamSchedulerApplication.csproj
+++ b/DreamSchedulerApplication/DreamSchedulerApplication.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SequenceGeneratorController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Libraries\PasswordHash.cs" />
     <Compile Include="Global.asax.cs">
@@ -146,6 +147,7 @@
     <Compile Include="Models\AcademicRecord.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
+    <Compile Include="Models\Sequence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PrivateData.cs" />
   </ItemGroup>
@@ -236,6 +238,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\JsonProfessors.cshtml" />
     <Content Include="Views\Student\CourseSequence.cshtml" />
+    <Content Include="Views\SequenceGenerator\GenerateSequence.cshtml" />
+    <Content Include="Views\SequenceGenerator\GenerateCustomSequence.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
