--- a/DreamSchedulerApplication/DreamSchedulerApplication.csproj
+++ b/DreamSchedulerApplication/DreamSchedulerApplication.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
     <Compile Include="Models\Sequence.cs" />
+    <Compile Include="Models\SequenceGenerators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PrivateData.cs" />
   </ItemGroup>
@@ -238,8 +239,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\JsonProfessors.cshtml" />
     <Content Include="Views\Student\CourseSequence.cshtml" />
-    <Content Include="Views\SequenceGenerator\GenerateSequence.cshtml" />
-    <Content Include="Views\SequenceGenerator\GenerateCustomSequence.cshtml" />
+    <Content Include="Views\SequenceGenerator\GenerateDefaultSequence.cshtml" />
+    <Content Include="Views\SequenceGenerator\GenerateSchedule.cshtml" />
+    <Content Include="Views\SequenceGenerator\Constraints.cshtml" />
+    <Content Include="Views\SequenceGenerator\backup.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Constraint.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
