Bug fixes and validation
-Adds form validation for most properties
-Removes possibility of course dublication in academic record
-Removes GPA property
-Updating database now clears the existing one
-Adds proper semester display to all sequence views
-Links implemented functionality to GUI

--- a/DreamSchedulerApplication/DreamSchedulerApplication.csproj
+++ b/DreamSchedulerApplication/DreamSchedulerApplication.csproj
@@ -239,11 +239,10 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\JsonProfessors.cshtml" />
     <Content Include="Views\Student\CourseSequence.cshtml" />
-    <Content Include="Views\SequenceGenerator\GenerateDefaultSequence.cshtml" />
-    <Content Include="Views\SequenceGenerator\GenerateSchedule.cshtml" />
     <Content Include="Views\SequenceGenerator\Constraints.cshtml" />
-    <Content Include="Views\SequenceGenerator\backup.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Constraint.cshtml" />
+    <Content Include="Views\SequenceGenerator\DefaultCourseSequence.cshtml" />
+    <Content Include="Views\SequenceGenerator\StudentCourseSequence.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
