--- a/DreamSchedulerApplication/DreamSchedulerApplication.csproj
+++ b/DreamSchedulerApplication/DreamSchedulerApplication.csproj
@@ -137,7 +137,6 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SequenceGeneratorController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Libraries\PasswordHash.cs" />
@@ -146,11 +145,10 @@
     </Compile>
     <Compile Include="Models\AcademicRecord.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DatabaseManager.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
-    <Compile Include="Models\Sequence.cs" />
     <Compile Include="Models\SequenceGenerators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\PrivateData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -223,30 +221,28 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
-    <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Student\Professors.cshtml" />
     <Content Include="Views\Admin\Database.cshtml" />
-    <Content Include="Views\Manage\AccountEdit.cshtml" />
     <Content Include="Views\AcademicRecord\Index.cshtml" />
     <Content Include="Views\AcademicRecord\CreateCourseEntry.cshtml" />
     <Content Include="Views\AcademicRecord\EditCourseEntry.cshtml" />
     <Content Include="Views\AcademicRecord\DeleteCourseEntry.cshtml" />
     <Content Include="Views\Shared\_NavbarPartial.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Admin\JsonProfessors.cshtml" />
-    <Content Include="Views\Student\CourseSequence.cshtml" />
     <Content Include="Views\SequenceGenerator\Constraints.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Constraint.cshtml" />
     <Content Include="Views\SequenceGenerator\DefaultCourseSequence.cshtml" />
     <Content Include="Views\SequenceGenerator\StudentCourseSequence.cshtml" />
+    <Content Include="Views\Account\EditAccount.cshtml" />
+    <Content Include="Views\Account\RequestAdminAccount.cshtml" />
+    <Content Include="Views\Account\RequestAdminAccountConfirmation.cshtml" />
+    <Content Include="Views\Student\CourseDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Neo4j\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
